--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "export": "next build"
+    "start": "next start"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
